# canvaspainter-helloworld

./: CMakeLists.txt  LICENSE  Main.qml  README.md  helloitem.cpp  helloitem.h  helloitemrenderer.cpp  helloitemrenderer.h  main.cpp
